# RabbitIm

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.bak  AppIcon.rc  Authors.md  Authors.txt  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  Dockerfile  Doxyfile.in  Doxyfile.template  Doxyfile.template.cmake  Global.cpp  Global.h  GlobalUser.cpp  GlobalUser.h  License.html  License.md  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  RabbitIm.prf  RabbitIm.pri  RabbitIm.pro  RabbitIm.pro.bak  RabbitImApp.pro  RabbitImLib.pro  TODO.txt  Tool.cpp  Tool.h  XmppClient.cpp  XmppClient.h  appveyor.yml  appveyor.yml.bak  build_debpackage.sh  circle.yml  cmake_uninstall.cmake.in  (+3 more)
App/: AppIcon.rc  CMakeLists.txt  RabbitImApp.pro  RabbitImApp.pro.bak  main.cpp
App/Resource/Translations/: RabbitImApp_ar.ts  RabbitImApp_ca.ts  RabbitImApp_cs.ts  RabbitImApp_da.ts  RabbitImApp_de.ts  RabbitImApp_el.ts  RabbitImApp_en.ts  RabbitImApp_en_GB.ts  RabbitImApp_es.ts  RabbitImApp_et.ts  RabbitImApp_fi.ts  RabbitImApp_fr.ts  RabbitImApp_gd.ts  RabbitImApp_gl.ts  RabbitImApp_hu.ts  RabbitImApp_it.ts  RabbitImApp_ja.ts  RabbitImApp_ko.ts  RabbitImApp_nb.ts  RabbitImApp_ne.ts  RabbitImApp_nl.ts  RabbitImApp_nn.ts  RabbitImApp_oc.ts  RabbitImApp_pl.ts  RabbitImApp_pt_BR.ts  RabbitImApp_pt_PT.ts  RabbitImApp_ro.ts  RabbitImApp_ru.ts  RabbitImApp_sk.ts  RabbitImApp_sl.ts  RabbitImApp_sv.ts  RabbitImApp_th.ts  RabbitImApp_tr.ts  RabbitImApp_uk.ts  RabbitImApp_zh.ts  RabbitImApp_zh_CN.ts  RabbitImApp_zh_TW.ts
Plugin/: CMakeLists.txt  Common.cmake  ConfigApp.pri  ConfigProtocol.pri  ManagePlugin.cpp  ManagePlugin.h  ManagePluginApp.cpp  ManagePluginApp.h  ManagePluginProtocol.cpp  ManagePluginProtocol.h  Plugin.pro  Plugin.pro.bak  PluginApp.cpp  PluginApp.h  PluginAppFactory.h  PluginAppManage.cpp  PluginAppManage.h  PluginConverFormat.cpp  PluginConverFormat.h  PluginConvertFormat.cpp  PluginConvertFormat.h  PluginProtocol.cpp  PluginProtocol.h  PluginStatic.cmake  PluginStatic.cpp  PluginStatic.pri  config.pri  translations.pri
Plugin/App/: CMakeLists.txt
Plugin/App/FaceRecognizer/: CMakeLists.txt  CapThread.cpp  DetectFaces.cpp  DetectFaces.h  FrmFaceRecognizer.h
Plugin/App/Lbs/: CMakeLists.txt  FrmLbsMain.cpp  FrmLbsMain.h  Lbs.pri  LbsMotion.cpp  LbsMotion.ui  LbsPositionLogger.cpp  LbsTrack.cpp  LbsTrack.ui  Lbs_App.pro  Nmea.cpp  PluginAppMotion.cpp
Plugin/App/QRCode/: CMakeLists.txt  CPluginQRCode.cpp  CPluginQRCode.h  FrmScanQRcode.cpp  FrmScanQRcode.h  FrmScanQRcode.ui  QRCode.pri
Plugin/App/ScreenShot/: CMakeLists.txt  DlgScreenShot.cpp  DlgScreenShot.h  PluginScreenShot.cpp  PluginScreenShot.h  ScreenShot.pro  WdgScreenEditor.cpp  WdgScreenEditor.h
Plugin/FaceRecognizer/: CMakeLists.txt  CapThread.h  DetectFaces.cpp  DetectFaces.h  FrmFaceRecognizer.cpp  FrmFaceRecognizer.h  FrmFaceRecognizer.ui  main.cpp
Plugin/Lbs/: CMakeLists.txt  FrmLbsMain.cpp  FrmLbsMain.h  FrmLbsMain.ui  Lbs.pri  Lbs.pro  LbsCamera.cpp  LbsMotion.cpp  LbsMotion.h  LbsMotion.ui  LbsPositionLogger.cpp  LbsPositionLogger.h  LbsTrack.h  LbsTrack.ui  Lbs_App.pro  Map.qml  Nmea.cpp  PluginAppMotion.cpp  PluginAppMotion.h  lbs.qrc  main.cpp
Plugin/Protocol/: CMakeLists.txt
Plugin/ProtocolQXmpp/: CMakeLists.txt  CallObjectQXmpp.cpp  CallObjectQXmpp.h  CallObjectQXmppWebrtc.cpp  CallObjectQXmppWebrtc.h  ClientXmpp.cpp  ClientXmpp.h  FileTransferQXmpp.cpp  FileTransferQXmpp.h  GroupChatQxmpp.cpp  GroupChatQxmpp.h  ManageCallWebrtcXmpp.cpp  ManageCallWebrtcXmpp.h  ManageCallXmpp.cpp  ManageCallXmpp.h  ManageGroupChatQxmpp.cpp  ManageGroupChatQxmpp.h  ManageUserQXmpp.cpp  ManageUserQXmpp.h  MediaConstraints.h  PluginProtocolQXmpp.cpp  PluginProtocolQXmpp.h  ProtocolQXmpp.pro  QXmppCallWebrtcManager.cpp  QXmppCallWebrtcManager.h  QXmppWebRtcIq.cpp  QXmppWebRtcIq.h  UserInfoXmpp.cpp  UserInfoXmpp.h  VideoRenderer.cpp  VideoRenderer.h  WebrtcConductor.cpp  WebrtcConductor.h  WebrtcFilter.cpp  WebrtcFilter.h  WebrtcQtSocketServer.cpp  WebrtcQtSocketServer.h
Plugin/QRCode/: CMakeLists.txt  CPluginQRCode.cpp  CPluginQRCode.h  FrmScanQRcode.cpp  FrmScanQRcode.h  FrmScanQRcode.ui  QRCode.h  QRCode.json  QRCode.pri  QRCode.pro  QRCode_App.pro  main.cpp
Plugin/ScreenShot/: CMakeLists.txt  DlgScreenShot.cpp  DlgScreenShot.h  PluginScreenShot.cpp  PluginScreenShot.h  ScreenShot.pro  ScreenShot_App.pro  WdgScreenEditor.cpp  WdgScreenEditor.h  main.cpp
Plugin/Update/: CMakeLists.txt  DlgUpdate.cpp  DlgUpdate.h  DlgUpdate.ui  DownLoad.cpp  DownLoadHandle.cpp  DownLoadHandle.h  PluginUpdate.cpp  PluginUpdate.h  Update.pro  Update.xml.template  Version.h.template  Version.h.template.cmake
Plugin/build-Lbs-qt5_5_1_windows_msvc-Debug/: Makefile.Debug  Makefile.Release  ui_FrmLbsMain.h  ui_LbsMotion.h  ui_LbsTrack.h
Plugin/cmake/: PluginApp.cmake  PluginCommon.cmake  PluginProtocol.cmake
Plugin/pri/: ConfigApp.pri  ConfigCommon.pri  ConfigProtocol.pri  translations.pri
Src/: CMakeLists.txt  Files.cmake  Files.pri  MainWindow.cpp  MainWindow.h  MainWindow.ui  RabbitCommon.pro  RabbitCommon.pro.bak  Src.pro  Src.pro.bak
Src/Call/: CallAction.cpp  CallObject.cpp  CallObject.h  ManageCall.cpp  ManageCall.h
Src/Client/: Client.cpp  Client.h
Src/Emoji/: CustomTextDocument.cpp  Emoji.cpp  Emoji.h  EmoticonsWidget.cpp  EmoticonsWidget.h  SmileyPack.cpp
Src/Emoji/Emojis/: emojione.qrc  (+1 more)
Src/Emoticon/: CustomTextDocument.h  EmoticonsWidget.cpp  SmileyPack.cpp  SmileyPack.h
Src/FileTransfer/: FileTransfer.cpp  FileTransferAction.cpp  FileTransferAction.h  ManageFileTransfer.cpp  ManageFileTransfer.h
Src/Global/: Encrypt.cpp  Encrypt.h  Global.cpp  Global.h  GlobalDir.cpp  GlobalDir.h  Log.cpp
Src/Manage/: Manage.h  ManageMessageDialog.cpp  ManageMessageDialogBigScreen.cpp  ManageUser.cpp  ManageUser.h  Manager.cpp
Src/Message/: EmoticonsWidget.cpp  EmoticonsWidget.h  ManageMessage.cpp  SmileyPack.cpp  style.cpp  style.h
Src/UserInfo/: COperateRoster.cpp  COperateRoster.h  User.cpp  User.h  UserInfo.cpp  UserInfo.h
Src/Widgets/: MainAnimation.cpp  MainAnimation.h
Src/common/: QRCode.cpp  Tool.cpp  Tool.h
(+1049 files in other folders)
