file(GLOB dirs *)
foreach(d ${dirs})
    IF(IS_DIRECTORY ${d})
        file(RELATIVE_PATH relative_dir ${CMAKE_CURRENT_SOURCE_DIR} ${d})
    	if(NOT (relative_dir MATCHES "build*"))
            if(NOT ("FaceRecognizer" STREQUAL "${relative_dir}"))
                add_subdirectory(${relative_dir})
            endif()
        endif()
    ENDIF()
endforeach(d)
