
file(GLOB dirs *)
foreach(d ${dirs})
    IF(IS_DIRECTORY ${d})
        file(RELATIVE_PATH relative_dir ${CMAKE_CURRENT_SOURCE_DIR} ${d})
    	if(relative_dir MATCHES "build*")
            continue()
        endif()
        if(relative_dir STREQUAL "FaceRecognizer")
            continue()
        endif()
        if(relative_dir STREQUAL "cmake")
            continue()
        endif()
        if(relative_dir STREQUAL "pri")
            continue()
        endif()
        add_subdirectory(${relative_dir})
    ENDIF()
endforeach(d)
